# speed-control-dc-motor

./: .ruff.toml
edrive/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
edrive/docs/: ARCHITECTURE.md  SPEC.md
edrive/experiments/: bode_plot.py  dc_motor_pi_poles_step.py  step_and_bode_dc_motor.py  test_speed_sta.py
edrive/src/edrive/: __init__.py
edrive/src/edrive.egg-info/: SOURCES.txt  requires.txt
edrive/src/edrive/common/: __init__.py
edrive/src/edrive/controllers/: 2smc.py  __init__.py  bus_st.py  cascade.py  linearizer_sta.py  speed_sta.py
edrive/src/edrive/observers/: boost_obs.py  sta_obs.py
edrive/src/edrive/plants/boost/: averaged.py
edrive/src/edrive/plants/motor/: pmdc_state_space.py
edrive/src/edrive/sim/: sim_dc_dc_boost_converter_2smc_cascade_cont.py  sim_dc_dc_boost_converter_closed_loop_st.py  sim_dc_dc_boost_converter_open_loop.py  sim_pmdc_2smc_cascade_cont.py  sim_pmdc_open_loop.py
